--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,14 @@
-[package]
-name = "voting-poc"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"
+members = [
+    "./src/shared",
+    "./src/simple_neuron",
+    "./src/layer",
+    "./src/neural_governance",
+]
 
-[lib]
-crate-type = ["cdylib"]
-
-[features]
-testutils = ["soroban-sdk/testutils"]
-
-[dependencies]
-soroban-sdk = "0.9.2"
-graph = "0.3.0"
-fpdec = { version = "0.8.1", default-features = false }
+[workspace.dependencies]
+soroban-sdk = { git = "https://github.com/karol-bisztyga/rs-soroban-sdk.git", branch = "kb/fork" }
 
 [profile.release]
 opt-level = "z"
