--- a/src/prior_voting_history_neuron/Cargo.toml
+++ b/src/prior_voting_history_neuron/Cargo.toml
@@ -1,18 +1,17 @@
 [package]
-name = "voting-shared"
+name = "voting-prior-voting-history-neuron"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 soroban-sdk = { workspace = true }
+voting-shared = { path = "../shared" }
 
 [dev_dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
 
 [features]
 testutils = ["soroban-sdk/testutils"]
-
-[lib]
-crate-type = ["lib"]
-name = "voting_shared"
-path = "src/lib.rs"
