--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = [
     "./src/shared",
     "./src/external_data_provider",
-    "./src/simple_neuron",
+    "./src/template_neuron",
     "./src/assigned_reputation_neuron",
     "./src/prior_voting_history_neuron",
     "./src/layer",
