--- a/src/voting_system/Cargo.toml
+++ b/src/voting_system/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 soroban-sdk = { workspace = true }
+soroban_decimal_numbers = "0.1.2"
 
 [dev_dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
